Add more configuration

--- a/psmond.cfg
+++ b/psmond.cfg
@@ -1,3 +1,9 @@
 [Server]
-server=localhost
-port=9200
+server = localhost
+port = 9200
+
+[Settings]
+stderr_path = /dev/null
+pidfile_path = psmond.pid
+pidfile_timeout = 5
+update_interval = 5
