update cfg file

--- a/psmond.cfg
+++ b/psmond.cfg
@@ -1,9 +1,10 @@
 [Server]
-server = localhost
-port = 9200
+server = http://localhost:9200/
 
 [Settings]
+index = psutils
+stdout_path = /tmp/psmond.out
 stderr_path = /dev/null
-pidfile_path = psmond.pid
+pidfile_path = /tmp/psmond.pid
 pidfile_timeout = 5
 update_interval = 5
