update cfg file

--- a/psmond.cfg
+++ b/psmond.cfg
@@ -4,7 +4,7 @@ server = http://localhost:9200/
 [Settings]
 index = psutils
 stdout_path = /tmp/psmond.out
-stderr_path = /dev/null
+stderr_path = /tmp/psmond.err
 pidfile_path = /tmp/psmond.pid
 pidfile_timeout = 5
 update_interval = 5
